--- a/majalaat/src/index.html
+++ b/majalaat/src/index.html
@@ -1,13 +1,151 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar" dir="rtl">
+
 <head>
-  <meta charset="utf-8">
-  <title>Majalaat</title>
+
+
+  <title>ختمة.نت</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta name="description"
+    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+  <meta name="keywords" content="قران , تلاوة , ختمة">
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+
+
+  <!-- Android  -->
+  <meta name="theme-color" content="#1c6151">
+  <meta name="mobile-web-app-capable" content="yes">
+
+  <!-- iOS -->
+  <meta name="apple-mobile-web-app-title" content="ختمة.نت">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+  <!-- Windows  -->
+  <meta name="msapplication-navbutton-color" content="#1c6151">
+  <meta name="msapplication-TileColor" content="#1c6151">
+  <meta name="msapplication-TileImage" content="assets/icons/favicon-144x144.png">
+  <meta name="msapplication-config" content="browserconfig.xml">
+
+  <!-- Pinned Sites  -->
+  <meta name="application-name" content="ختمة.نت">
+  <meta name="msapplication-tooltip" content="Tooltip Text">
+  <meta name="msapplication-starturl" content="/">
+
+  <!-- Tap highlighting  -->
+  <meta name="msapplication-tap-highlight" content="no">
+
+  <!-- UC Mobile Browser  -->
+  <meta name="full-screen" content="yes">
+  <meta name="browsermode" content="application">
+
+
+  <!-- Fitscreen  -->
+  <!-- <meta name="viewport" content="uc-fitscreen=yes" /> -->
+
+  <!-- Layout mode -->
+  <meta name="layoutmode" content="fitscreen/standard">
+
+  <!-- imagemode - show image even in text only mode  -->
+  <meta name="imagemode" content="force">
+
+  <!-- Orientation  -->
+  <meta name="screen-orientation" content="portrait">
+
+
+
+  <!-- Main Link Tags  -->
+  <link href="assets/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+  <link href="assets/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="assets/icons/favicon-48x48.png" rel="icon" type="image/png" sizes="48x48">
+
+  <!-- iOS  -->
+  <link href="assets/icons/maskable_icon.png" rel="apple-touch-icon">
+  <!-- <link href="touch-icon-ipad.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152"> -->
+
+  <!-- Startup Image  -->
+  <link href="assets/khitma-logo.png" rel="apple-touch-startup-image">
+
+  <!-- Pinned Tab  -->
+  <link href="assets/khitma-logo.png" rel="mask-icon" size="any" color="red">
+
+  <!-- Android  -->
+  <link href="assets/icons/maskable_icon_x192.png" rel="icon" sizes="192x192">
+  <link href="assets/icons/maskable_icon_x128.png" rel="icon" sizes="128x128">
+
+  <!-- Others -->
+  <link href="assets/icons/favicon.icon" rel="shortcut icon" type="image/x-icon">
+
+
+  <!-- Manifest.json  -->
+  <!-- <link rel="manifest" href="manifest.webmanifest"> -->
+
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <meta name="theme-color" content="#1c6151">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://khitma.net">
+  <meta property="og:title" content="ختمة.نت">
+  <meta property="og:description"
+    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+  <meta property="og:image" content="assets/link-preview.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://khitma.net">
+  <meta property="twitter:title" content="ختمة.نت">
+  <meta property="twitter:description"
+    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+  <meta property="twitter:image" content="assets/link-preview.png">
+
+
+
+
+
 </head>
-<body>
+
+<body class="mat-typography">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+
+
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyCgf2pFX4RSaFf0NBUdrdQ7hGXRMeoSL7I",
+      authDomain: "majalaat-com.firebaseapp.com",
+      databaseURL: "https://majalaat-com.firebaseio.com",
+      projectId: "majalaat-com",
+      storageBucket: "majalaat-com.appspot.com",
+      messagingSenderId: "9873944528",
+      appId: "1:9873944528:web:84b7b0e34f68a9d637d3d5",
+      measurementId: "G-6889SF129C"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
+
 </body>
+
 </html>
