--- a/majalaat/src/index.html
+++ b/majalaat/src/index.html
@@ -4,7 +4,7 @@
 <head>
 
 
-  <title>ختمة.نت</title>
+  <title>مجالات</title>
   <base href="/">
 
   <meta name="description"
@@ -110,6 +110,7 @@
 
 
 
+  <link href="https://cdn.jsdelivr.net/npm/ficons@1.1.52/dist/ficons/font.css" rel="stylesheet">
 
 
 </head>
