--- a/majalaat/src/index.html
+++ b/majalaat/src/index.html
@@ -8,8 +8,8 @@
   <base href="/">
 
   <meta name="description"
-    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
-  <meta name="keywords" content="قران , تلاوة , ختمة">
+    content="مبادرة مجتمعيّة تهدف إلى مساعدة كلّ مقبل على التعليم وكلّ طالب جديد في مجتمعنا العربي على اختيار المجال والمكان الدراسي الأنسب لميوله وطموحه وقدراته وظروفه.">
+  <meta name="keywords" content="توجيه دراسي، تطوّع، جامعات، تعليم، أكاديمي">
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <!-- iOS -->
-  <meta name="apple-mobile-web-app-title" content="ختمة.نت">
+  <meta name="apple-mobile-web-app-title" content="مجالات">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
@@ -32,7 +32,7 @@
   <meta name="msapplication-config" content="browserconfig.xml">
 
   <!-- Pinned Sites  -->
-  <meta name="application-name" content="ختمة.نت">
+  <meta name="application-name" content="مجالات">
   <meta name="msapplication-tooltip" content="Tooltip Text">
   <meta name="msapplication-starturl" content="/">
 
@@ -59,9 +59,9 @@
 
 
   <!-- Main Link Tags  -->
-  <link href="assets/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-  <link href="assets/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-  <link href="assets/icons/favicon-48x48.png" rel="icon" type="image/png" sizes="48x48">
+  <link href="assets/majalaat-icon.png" rel="icon" type="image/png">
+  <!-- <link href="assets/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="assets/icons/favicon-48x48.png" rel="icon" type="image/png" sizes="48x48"> -->
 
   <!-- iOS  -->
   <link href="assets/icons/maskable_icon.png" rel="apple-touch-icon">
@@ -70,17 +70,17 @@
   <link href="touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152"> -->
 
   <!-- Startup Image  -->
-  <link href="assets/khitma-logo.png" rel="apple-touch-startup-image">
+  <link href="assets/majalaat-icon.png" rel="apple-touch-startup-image">
 
   <!-- Pinned Tab  -->
-  <link href="assets/khitma-logo.png" rel="mask-icon" size="any" color="red">
+  <link href="assets/majalaat-icon.png" rel="mask-icon" size="any" color="red">
 
   <!-- Android  -->
   <link href="assets/icons/maskable_icon_x192.png" rel="icon" sizes="192x192">
   <link href="assets/icons/maskable_icon_x128.png" rel="icon" sizes="128x128">
 
   <!-- Others -->
-  <link href="assets/icons/favicon.icon" rel="shortcut icon" type="image/x-icon">
+  <link href="assets/majalaat-icon.png" rel="shortcut icon" type="image/png">
 
 
   <!-- Manifest.json  -->
@@ -94,18 +94,18 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://khitma.net">
-  <meta property="og:title" content="ختمة.نت">
+  <meta property="og:url" content="https://majalaat.com">
+  <meta property="og:title" content="مجالات">
   <meta property="og:description"
-    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+    content="مبادرة مجتمعيّة تهدف إلى مساعدة كلّ مقبل على التعليم وكلّ طالب جديد في مجتمعنا العربي على اختيار المجال والمكان الدراسي الأنسب لميوله وطموحه وقدراته وظروفه.">
   <meta property="og:image" content="assets/link-preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://khitma.net">
-  <meta property="twitter:title" content="ختمة.نت">
+  <meta property="twitter:url" content="https://majalaat.com">
+  <meta property="twitter:title" content="مجالات">
   <meta property="twitter:description"
-    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+    content="مبادرة مجتمعيّة تهدف إلى مساعدة كلّ مقبل على التعليم وكلّ طالب جديد في مجتمعنا العربي على اختيار المجال والمكان الدراسي الأنسب لميوله وطموحه وقدراته وظروفه.">
   <meta property="twitter:image" content="assets/link-preview.png">
 
 
